cli/src/tui/snapshots/braid_cli__tui__view__tests__snapshot_default.snap
---
source: src/tui/view.rs
expression: buffer_to_string(&terminal)
---
┌ braid ───────────────────────────────────────────────────┐
│No commands running.                                      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│press q to quit                                           │
└──────────────────────────────────────────────────────────┘
