cli/src/tui/snapshots/braid_cli__tui__view__tests__snapshot_disk_list.snap
---
source: src/tui/view.rs
expression: buffer_to_string(&terminal)
---
┌ braid ───────────────────────────────────────────────────┐
│Disks                                                     │
│  1  ata-Toshiba_MN07_XXXX                                │
│  2  ata-Ironwolf_ST12_YYYY                               │
│  3  ata-WDC_WD120_ZZZZ                                   │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│press q to quit                                           │
└──────────────────────────────────────────────────────────┘
