cli/src/tui/snapshots/braid_cli__tui__view__tests__snapshot_not_mounted.snap
---
source: src/tui/view.rs
expression: buffer_to_string(&terminal)
---
┌ braid ───────────────────────────────────────────────────┐
│Pool: not mounted                                         │
│                                                          │
│Disks                                                     │
│  1  toshiba                                              │
│  2  ironwolf                                             │
│  3  wdc                                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│press q to quit                                           │
└──────────────────────────────────────────────────────────┘
