cli/src/tui/snapshots/braid_cli__tui__view__tests__snapshot_with_pool.snap
---
source: src/tui/view.rs
expression: buffer_to_string(&terminal)
---
┌ braid ───────────────────────────────────────────────────┐
│Pool: /mnt/storage RAID1 healthy                          │
│Data: ███████████░░░░░░░░░░░░░░░░░  2.1 TiB / 5.4 TiB     │
│                                                          │
│Disks                                                     │
│  1  toshiba                                              │
│  2  ironwolf                                             │
│  3  wdc                                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│press q to quit                                           │
└──────────────────────────────────────────────────────────┘
