cli/src/tui/snapshots/braid_cli__tui__view__tests__snapshot_with_running_command.snap
---
source: src/tui/view.rs
expression: buffer_to_string(&terminal)
---
┌ braid ───────────────────────────────────────────────────┐
│1 command(s) running                                      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│press q to quit                                           │
└──────────────────────────────────────────────────────────┘
